# bm

./: Cargo.toml  README.md
le/: Cargo.toml
le/config/: Cargo.toml
le/config/src/: fixed.rs  lib.rs  variable.rs
le/derive/: Cargo.toml
le/derive/src/: lib.rs
le/derive/tests/: container.rs  derive.rs  partial.rs
le/src/: basic.rs  elemental_fixed.rs  elemental_variable.rs  fixed.rs  lib.rs  partial.rs  utils.rs  variable.rs
le/tests/: spec.rs
src/: empty.rs  index.rs  length.rs  lib.rs  list.rs  memory.rs  packed.rs  proving.rs  raw.rs  serialize.rs  traits.rs  tuple.rs  utils.rs  vec.rs  vector.rs
ssz/: Cargo.toml
ssz/src/: basic.rs  fixed.rs  lib.rs  variable.rs
ssz/tests/: spec.rs
tests/: proving.rs  ssz.rs
