[package]
name = "bm"
version = "0.5.5"
description = "Binary Merkle Trie"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
digest = "0.8"
typenum = "1.10"
generic-array = "0.12"

[dev-dependencies]
sha2 = "0.8"
hash-db = "0.11"
plain_hasher = "0.2"
primitive-types = "0.4"

[features]
default = ["std"]
std = []

[workspace]
members = [
  "le",
  "le/derive",
]