[package]
name = "bm-le-derive"
version = "0.1.0"
description = "Derive for bm-le."
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

[dev-dependencies]
bm-le = { version = "0.2", path = ".." }
primitive-types = "0.4"
sha2 = "0.8"